add_executable(3-longest_substring_without_repeating_characters 3-longest_substring_without_repeating_characters.cpp)
#add_executable(4-median_of_two_sorted_arrays 4-median_of_two_sorted_arrays.cpp)
add_executable(5-longest_palindromic_substring 5-longest_palindromic_substring.cpp)
add_executable(6-zigZag_conversion 6-zigZag_conversion.cpp)
add_executable(7-reverse_integer 7-reverse_integer.cpp)
add_executable(8-string_to_integer 8-string_to_integer.cpp)
add_executable(9-palindrome 9-palindrome.cpp)
#add_executable(10-regular_expression_matching 10-regular_expression_matching.cpp)
add_executable(11-container_with_most_water 11-container_with_most_water.cpp)
add_executable(12-int_to_roman 12-int_to_roman.cpp)
add_executable(13-roman_to_int 13-roman_to_int.cpp)