add_executable(privo_index privo_index.cpp)
add_executable(dominant_index dominant_index.cpp)
add_executable(plus_one plus_one.cpp)
add_executable(find_diagonal_order find_diagonal_order.cpp)
add_executable(spira_order spira_order.cpp)
add_executable(add_binary add_binary.cpp)
add_executable(str_str str_str.cpp)