add_executable(privo_index privo_index.cpp)
add_executable(dominant_index dominant_index.cpp)
add_executable(plus_one plus_one.cpp)
add_executable(find_diagonal_order find_diagonal_order.cpp)
add_executable(spira_order spira_order.cpp)
add_executable(add_binary add_binary.cpp)
add_executable(str_str str_str.cpp)
add_executable(longest_common_prefix longest_common_prefix.cpp)
add_executable(array_reverse_string reverse_string.cpp)
add_executable(array_pair_sum array_pair_sum.cpp)
add_executable(array_two_sum two_sum.cpp)
add_executable(array_remove_element remove_element.cpp)
add_executable(array_find_max_consecutive_ones find_max_consecutive_ones.cpp)
add_executable(min_sub_array_len min_sub_array_len.cpp)