add_executable(reverse_string reverse_string.cpp)
add_executable(swap_paris swap_paris.cpp)
add_executable(pascal_triangle pascal_triangle.cpp)
add_executable(pascal_triangle2 pascal_triangle2.cpp)
add_executable(reverse_list reverse_list.cpp)
add_executable(fibonacci fibonacci.cpp)
add_executable(climbStairs climbStairs.cpp)
add_executable(maxBinaryTreeDepth maxBinaryTreeDepth.cpp)
add_executable(merge_sorted_lists merge_sorted_lists.cpp)
add_executable(kth_grammar kth_grammar.cpp)
add_executable(generate_trees generate_trees.cpp)